<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/normal_padding"
    tools:context=".BasicQuestionsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_basic_questions_notice"
        android:gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:orientation="horizontal">
        <Button
            android:id="@+id/female_option_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_female"
            android:layout_gravity="end"
            android:textColor="@color/black"
            app:backgroundTint="@color/selection_state_color"
            app:cornerRadius="@dimen/normal_border_radius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/male_option_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:textColor="@color/black"
            app:backgroundTint="@color/selection_state_color"
            android:text="@string/gender_male"
            app:cornerRadius="@dimen/normal_border_radius"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:hint="@string/physical_age_hint">

        <!--this is the actual edit text which takes the input-->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/age_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrease_temperature_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:text="@string/minus"
            android:textColor="#5E35B1"
            tools:ignore="TextContrastCheck" />

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/physical_body_temperature_hint">

            <!--this is the actual edit text which takes the input-->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/body_temperature_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TextContrastCheck" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/increase_temperature_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textColor="#5E35B1"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>